kubernetes/prod/kustomize/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-endpoint
spec:
  replicas: 1
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: apps.deployment-wstech-ldml-api
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: apps.deployment-wstech-ldml-api
      namespace: wstech
    spec:
      serviceAccountName: api-deploy
      restartPolicy: Always
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - topologyKey: kubernetes.io/hostname
            labelSelector:
              matchExpressions:
                - key: workload.user.cattle.io/workloadselector
                  operator: In
                  values:
                    - apps.deployment-wstech-ldml-api
      containers:
      - name: api-endpoint
        command:
          - ldml-api
          - '--listen=0.0.0.0:80'
          - '--config=/var/lib/ldml-api/config.json'
          - '--profile=production'
        image: ghcr.io/tim-eves/ldml-api:latest
        livenessProbe:
          httpGet:
            path: /status
            port: http
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 1
        startupProbe:
          httpGet:
            path: /status
            port: http
          periodSeconds: 10
          timeoutSeconds: 1
          successThreshold: 1
          failureThreshold: 3
        ports:
          - containerPort: 80
            name: http
        resources:
          limits:
            memory: 256Mi
          requests:
            memory: 128Mi
        volumeMounts:
          - mountPath: /var/lib/ldml-api/sldr
            name: data-sets
            readOnly: true
            subPath: sldr
          - mountPath: /var/lib/ldml-api/langtags
            name: data-sets
            readOnly: true
            subPath: langtags

      - name: deploy-endpoint
        image: debian:bookworm-slim
        resources:
          requests: &guarenteed
            memory: "256Mi" 
          limits: *guarenteed
        command: [sh, -ec]
        args:
        - >-
          apt-get update; apt-get install -y curl webhook; apt-get clean;
          exec webhook -verbose
          -urlprefix 'hooks'
          -template
          -hooks=/webhooks/hooks.yaml
          -debug
        ports:
        - name: webhook
          containerPort: 9000
        volumeMounts:
        - name: webhooks
          mountPath: /webhooks
          readOnly: true

      volumes:
      - name: data-sets
        persistentVolumeClaim:
          claimName: data-sets
      - name: webhooks
        configMap:
          name: api
          items:
          - key: deploy.sh
            path: deploy.sh
            mode: 365
          - key: hooks.yaml
            path: hooks.yaml
