kubernetes/prod/kustomize/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api
spec:
  parentRefs:
    - name: gateway
      namespace: default
  hostnames:
  - ldml.api.languagetechnology.org
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: ldml-api-endpoint
      port: 80
  - matches:
    - path:
        type: PathPrefix
        value: /hooks/
    backendRefs:
    - name: ldml-api-endpoint
      port: 9000
